# stockconverter

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml  build.rs
gui/src/: main.rs
search/: Cargo.toml
search/src/: cfi.rs  cninfo.rs  hexun.rs  lib.rs  sina.rs  sohu.rs
