[package]
name = "search"
version = "0.2.3"
edition = "2024"

[dependencies]
color-eyre.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
neure.workspace = true
chrono.workspace = true
cote.workspace = true
encoding_rs.workspace = true
urlencoding.workspace = true
